Simplify code and remove unnecessary, overly complex elements; rework rows and columns to ensure correct stretched layout

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -8,9 +8,6 @@
   display: grid;
   grid-template-columns: 1fr 4fr;
   gap: 4px;
-  grid-template-rows: auto auto 1fr auto;
-  min-height: 100vh;
-  
 }
 
 .container div {
@@ -23,31 +20,23 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
   display: grid;
-  grid-template-columns: auto auto;
-  grid-column: 1/-1;
-  grid-row: 1;
-  justify-content: space-between;
-  align-items: center;
+  grid-template-columns: 1fr 2fr;
 }
+
 
 .menu ul,
 .menu li {
   font-size: 16px;
-  display: grid;
-  grid-template-columns: repeat(4, 0.8fr);
-  white-space: nowrap;
+  list-style-type: none;
 }
 
 .sidebar {
   background-color: #C50208;
+  grid-row: 2 / 4;
   display: grid;
   gap: 50px;
-  align-items: center;
-  justify-content: center;
-  grid-row: 2 / 4;
-  grid-column: 1;
-
 }
 
 .sidebar .photo {
@@ -68,35 +57,19 @@
 
 .nav {
   background-color: #C50208;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  text-align: center;
-  height: 1vh;
-  grid-column: 2;
-  grid-row: 2;
 }
 
-.nav ul {
-  display: grid;
-  display: contents;
-}
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
-  display: grid;
-  align-items: center;
-  justify-content: center;
 }
 
 .article {
   background-color: #bccbde;
   display: grid;
-  gap: 15px;
-  grid-column: 2;
-  grid-row: 3;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  align-content: start;
+  gap: 15px;
 }
 
 .article p {
@@ -117,6 +90,7 @@
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
@@ -126,10 +100,7 @@
 
 .footer {
   background-color: #393f4d;
-  display: grid;
-  grid-column: 1/-1;
-  grid-row: 4;
-  margin-bottom: 4px;
+  grid-column: 1 / 3;
 }
 
 .footer p {
@@ -137,14 +108,27 @@
   font-weight: normal;
 }
 
-ul {
-  list-style-type: none;
-}
+.logo {
+    justify-self: start;
+  }
 
-.sidebar div {
-  height: 15vh;
-  width: 25vh;
+.menu {
+    align-self: center;
+  }
+
+.menu ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+.side-content,
+.photo {
   display: grid;
   align-items: center;
-  justify-content: center;
+}
+
+.nav ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
